[gd_scene load_steps=6 format=2]

[ext_resource path="res://MiscRelated/FontRelated/Fonts/LcdSolid/LcdSolid-VPzB.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameFrontHUDRelated/NonGameSubs/InGamePauseRelated/Subs/InGamePause_MainPage/Assets/InGamePause_MainPage_Background.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameFrontHUDRelated/NonGameSubs/InGamePauseRelated/Subs/InGamePause_MainPage/InGamePause_MainPage.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 2
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 1 )

[node name="InGamePause_MainPage" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 280.0
margin_bottom = 370.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="FreeFormControl" type="Control" parent="."]
margin_right = 280.0
margin_bottom = 370.0
mouse_filter = 2

[node name="HeaderLabel" type="Label" parent="FreeFormControl"]
margin_left = 16.0
margin_top = 22.0
margin_right = 266.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game is
NOT Paused"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="FreeFormControl"]
margin_left = 40.0
margin_top = 151.0
margin_right = 239.0
margin_bottom = 361.0
mouse_filter = 2
custom_constants/separation = 40

[node name="Button_Resume" parent="FreeFormControl/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 199.0
margin_bottom = 33.0

[node name="TextureButton" parent="FreeFormControl/VBoxContainer/Button_Resume" index="0"]
margin_right = 199.0
margin_bottom = 33.0

[node name="LabelContainer" parent="FreeFormControl/VBoxContainer/Button_Resume" index="1"]
margin_right = 199.0
margin_bottom = 33.0

[node name="Label" parent="FreeFormControl/VBoxContainer/Button_Resume/LabelContainer" index="0"]
margin_right = 199.0
margin_bottom = 33.0
text = "Resume"

[node name="Button_Restart" parent="FreeFormControl/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 73.0
margin_right = 199.0
margin_bottom = 106.0

[node name="TextureButton" parent="FreeFormControl/VBoxContainer/Button_Restart" index="0"]
margin_right = 199.0
margin_bottom = 33.0

[node name="LabelContainer" parent="FreeFormControl/VBoxContainer/Button_Restart" index="1"]
margin_right = 199.0
margin_bottom = 33.0

[node name="Label" parent="FreeFormControl/VBoxContainer/Button_Restart/LabelContainer" index="0"]
margin_right = 199.0
margin_bottom = 33.0
text = "Restart"

[node name="Button_MainMenu" parent="FreeFormControl/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 146.0
margin_right = 199.0
margin_bottom = 179.0

[node name="TextureButton" parent="FreeFormControl/VBoxContainer/Button_MainMenu" index="0"]
margin_right = 199.0
margin_bottom = 33.0

[node name="LabelContainer" parent="FreeFormControl/VBoxContainer/Button_MainMenu" index="1"]
margin_right = 199.0
margin_bottom = 33.0

[node name="Label" parent="FreeFormControl/VBoxContainer/Button_MainMenu/LabelContainer" index="0"]
margin_right = 199.0
margin_bottom = 33.0
text = "Main Menu"

[connection signal="button_pressed" from="FreeFormControl/VBoxContainer/Button_Resume" to="." method="_on_Button_Resume_button_pressed"]
[connection signal="button_pressed" from="FreeFormControl/VBoxContainer/Button_Restart" to="." method="_on_Button_Restart_button_pressed"]
[connection signal="button_pressed" from="FreeFormControl/VBoxContainer/Button_MainMenu" to="." method="_on_Button_MainMenu_button_pressed"]

[editable path="FreeFormControl/VBoxContainer/Button_Resume"]
[editable path="FreeFormControl/VBoxContainer/Button_Restart"]
[editable path="FreeFormControl/VBoxContainer/Button_MainMenu"]
